Fix the width of pre on mobile devices

--- a/assets/themes/mayank/css/_mobile.scss
+++ b/assets/themes/mayank/css/_mobile.scss
@@ -32,6 +32,10 @@
 
 	.page-content {
 		margin-top: 0;
+
+		pre {
+			overflow-y: scroll;
+		}
 	}
 
 	.page-footer {
